<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart</string>
    <string name="menu_settings">Settings</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <string name="altitude">Altitude :</string>
    <string name="accuracy">Accuracy :</string>
    <string name="centerMap">Recentering the map</string>
    <string name="findGPS">Finding GPS signal..</string>
    <string name="gpsSettings">GPS settings</string>
    <string name="gpsMessage">	This application required GPS.\nYou should activate it.\nYou can also activated it by setting menu.</string>
    <string name="cancel">Cancel</string>
    <string name="validate">Validate</string>
    <string name="hideInfoZone">Hide informations</string>
    <string name="showInfoZone">Show informations</string>
    <string name="exit">Exit ?</string>
    <string name="exitMsg">Are you sure you want to quit SMART ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="option">Option</string>
    <string name="addShortcut">Add shortcut</string>
    <string name="removeShortcut">Remove shortcut</string>

    <string-array name="items">
        <item>Start mission</item>
        <item>Create form</item>
        <item>Point Survay</item>
        <item>Line Survay</item>
        <item>Polygon Survay</item>
        <item>Import KML</item>
        <item>Import GeoTIFF</item>
        <item>Import ShapeFile</item>

    </string-array>
    <string name="stopMission">Stop mission</string>
    
     <string-array name="typeFields">
        <item>Text</item>
        <item>Numeric</item>
        <item>Boolean</item>
        <item>List</item>
        <item>Picture</item>
        <item>Height</item>
    </string-array>

    <string name="title_activity_layers">LayersActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="zoomIn">Do you really want to zoom in even if tiles are missing?</string>
    <string name="zoomOut">Do you really want to zoom out even if tiles are missing?</string>
    <string name="title_activity_create_form">CreateFormActivity</string>
    <string name="zoomTitle">Tiles missing for this zoom level"</string>
    
    <string name="missionName">Name :</string>
    <string name="selectForm">Form :</string>
    <string name="formBrowser">Select form file</string>
    <string name="mission">Mission</string>
    
    <string name="defaultForm">Default</string>
    <string name="othertForm">Other</string>
      <string name="track_text_name">Enter a name for this track</string>
    <string name="track_text_param">Enter a value for the mode selected </string>
    <string name="track_radio_time">Time (s)</string>
    <string name="track_radio_distance">Distance (m)</string>
    <string name="create_button">Create</string>
    <string name="cancel_button">Cancel</string>
   <string name="track_name_missing">Must enter a name for the track</string> 
   <string name="track_param_missing"> Must enter a param for the mode selected</string> 
      <string name="track_param_false">Param must be an integer</string> 
      <string name="track_error">Error while stopping track</string> 
    
    <string name="Coms">Comments</string>
        <string name="ComsDefault">Default field : Comments</string>
    
    <string name="CreateForm">Create Form</string>
    <string name="AddField">Add a new field</string>
    <string name="title_activity_add_fieldto_form">AddFieldtoFormActivity</string>
    <string name="Name">Name</string>
    <string name="List">List</string>
       

</resources>