<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateFormActivity" >

     <TextView 	android:id = "@+id/title" 
    android:layout_width = "fill_parent"
	android:layout_height = "wrap_content"
	android:gravity ="center"
	android:text="@string/CreateForm"/>
    
    
	<TableRow android:id="@+id/tableRow1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
        
		<TextView android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
		android:padding="10dip"
		android:id = "@+id/commentairesLabel" 
		android:text="@string/Coms"/>
		
		<EditText 
		android:inputType="textMultiLine"
		android:layout_width = "match_parent"
		android:layout_height = "wrap_content"
		android:padding="10dip"
		android:id = "@+id/commentaires" />
	
	</TableRow>
	
	
	<TableRow android:id="@+id/tableRow3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
		
	<Button  android:id="@+id/buttonAdd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="27dp"
	android:gravity ="center"
    android:text="@string/AddField"/>
	
	<Button  android:id="@+id/buttonValidate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="27dp"
	android:gravity ="center"
    android:text="@string/validate"/>
	
	</TableRow>

	<TableLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	android:id = "@+id/layoutDynamicCreateFormulaire"
	android:orientation = "vertical"
	android:layout_width = "fill_parent"
	android:layout_height = "fill_parent" />

</RelativeLayout>